# Logify

./: Cargo.toml  README.md  readme.md
data/: log.csv
logs/: example.csv  example.json
src/: aggregate.rs  analyze.rs  cli.rs  combine.rs  config.rs  error.rs  export.rs  filter.rs  integration_tests.rs  lib.rs  main.rs  parser.rs  reducers.rs  some.rs  transformers.rs  utils.rs
src/models/: log_entry.rs  mod.rs
