[package]
name = "logify"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A powerful log analysis tool"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
csv = "1.2"
config = "0.13"
regex = "1.8"
tempfile = "3.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"